Fix #34966: cycles packed PNG images were showing alpha fringe, packed images were not properly premultiplied.